[tool.poetry]
name = "python-l"
version = "0.1.0"
description = "first python project"
authors = ["kamalesh <kamalesh.srinivasan1@freshworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]   
python = "3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
